# cubei

./: .gitignore  README.md  meson.build
GamePhysicsSdk/: meson.build
GamePhysicsSdk/easy_physics/: EpxBase.h
GamePhysicsSdk/easy_physics/collision/: EpxClosestFunction.cpp  EpxConvexConvexContact.cpp
GamePhysicsSdk/easy_physics/elements/: EpxCollidable.h  EpxConvexMesh.cpp
GamePhysicsSdk/easy_physics/pipeline/: EpxAllocator.h  EpxBroadphase.cpp  EpxCollisionDetection.cpp  EpxConstraintSolver.cpp  EpxConstraintSolver.h  EpxSort.h
GamePhysicsSdk/easy_physics/project/: easy_physics.vcxproj  easy_physics.vcxproj.filters
GamePhysicsSdk/extra/physics_effects/: meson.build  readme_j.txt
GamePhysicsSdk/extra/physics_effects/include/: physics_effects.h
GamePhysicsSdk/extra/physics_effects/include/physics_effects/base_level/: pfx_base_level_include.h
GamePhysicsSdk/extra/physics_effects/include/physics_effects/low_level/: pfx_low_level_include.h
GamePhysicsSdk/extra/physics_effects/project/: physics_effects_lib.oss.vcproj  physics_effects_lib.oss.vcxproj  physics_effects_lib.oss.vcxproj.filters  physics_effects_lib.oss_vs2010.sln
GamePhysicsSdk/extra/physics_effects/sample/api_physics_effects/: physics_effects_samples.oss_vs2008.sln  physics_effects_samples.oss_vs2010.sln
GamePhysicsSdk/extra/physics_effects/sample/api_physics_effects_high_level/: main.cpp  physics_func.cpp  physics_func.h  town.h  tutorial_physics_effects_high_level.windows.vcproj  tutorial_physics_effects_high_level.windows.vcxproj  tutorial_physics_effects_high_level.windows.vcxproj.filters  tutorial_physics_effects_high_level.windows_vs2008.sln  tutorial_physics_effects_high_level.windows_vs2010.sln
GamePhysicsSdk/extra/physics_effects/src/util/: pfx_debug_render.cpp  pfx_mass.cpp  pfx_mesh_creator.cpp  pfx_util_common.cpp
GamePhysicsSdk/sample/: meson.build  physics_sample_vs2008.sln  physics_sample_vs2010.sln
GamePhysicsSdk/sample/01_basic/: 01_basic.vcproj  01_basic.vcxproj  main.cpp  meson.build  physics_func.cpp  physics_func.h
GamePhysicsSdk/sample/02_compound/: 02_compound.vcproj  02_compound.vcxproj  main.cpp  physics_func.cpp
GamePhysicsSdk/sample/03_joint/: 03_joint.vcproj  03_joint.vcxproj  main.cpp  meson.build  physics_func.cpp
GamePhysicsSdk/sample/common/: common.cpp  common.h  ctrl_func.cpp  ctrl_func.h  font_render_func.cpp  font_render_func.h  meson.build  render_func.cpp  render_func.h
easy_physics/: meson.build
easy_physics/easy_physics/: Doxyfile  EpxBase.h  EpxInclude.h  EpxMass.h  meson.build
easy_physics/easy_physics/collision/: EpxVectorFunction.h
easy_physics/easy_physics/elements/: EpxBallJoint.h  EpxCollidable.h  EpxContact.cpp  EpxContact.h  EpxConvexMesh.cpp  EpxConvexMesh.h  EpxPair.h  EpxShape.h  EpxState.h
easy_physics/easy_physics/pipeline/: EpxBroadphase.cpp  EpxBroadphase.h  EpxCollisionDetection.cpp  EpxCollisionDetection.h  EpxConstraintSolver.cpp  EpxConstraintSolver.h  EpxIntegrate.cpp  EpxIntegrate.h  EpxSort.h
easy_physics/easy_physics/project/: easy_physics.vcproj
easy_physics/sample/: meson.build
easy_physics/sample/01_basic/: main.cpp  meson.build  physics_func.cpp  physics_func.h  physics_scene.cpp  physics_scene.h
easy_physics/sample/02_compound/: main.cpp  meson.build  physics_func.cpp  physics_func.h
easy_physics/sample/03_joint/: main.cpp  meson.build  physics_func.cpp  physics_func.h
easy_physics/sample/common/: ctrl_func.cpp  meson.build
easy_physics/sample/common/include/common/: DrawData.h  FontStashRenderer.h  GL1FontStashRenderer.h  GL3FontStashRenderer.h  Geometry.h  Gl1Renderer.h  GlfwPlatform.h  GraphicsScene.h  PhysicsSceneSelector.h  ScreenCamera.h  common.h  font_render_func.h  geometry_data.h  physics_scene.h  render_func.h
easy_physics/sample/common/src/: FontStashRenderer.cpp  Geometry.cpp  Gl1FontStashRenderer.cpp  Gl1Renderer.cpp  Gl3FontStashRenderer.cpp  GlfwPlatform.cpp  GraphicsScene.cpp  PhysicsScene.cpp  PhysicsSceneSelector.cpp  ScreenCamera.cpp  common.cpp  ctrl_func.cpp  font_render_func.cpp  physics_scene.cpp  render_func.cpp  win32window.h
qu3e/: meson.build
qu3e/demo/: App.cpp  App.h  BoxStack.h  Camera.h  Demo.cpp  Demo.h  DropBoxes.h  GL2Renderer.cpp  GL2Renderer.h  GL3Renderer.cpp  GL3Renderer.h  GLTypes.h  RayPush.h  Renderer.cpp  Renderer.h  glo.h  main.cpp  meson.build  stb_image.h
qu3e/demo/demos/: BoxStack.cpp  BoxStack.h  Demo.cpp  Demo.h  DropBoxes.cpp  DropBoxes.h  RayPush.cpp  RayPush.h  Renderer.cpp  Renderer.h  Test.cpp  Test.h
qu3e/freeglut/: meson.build
qu3e/imgui/: meson.build
qu3e/src/: meson.build  q3.h  q3Render.cpp  q3Render.h
qu3e/src/broadphase/: q3BroadPhase.cpp  q3BroadPhase.h  q3DynamicAABBTree.cpp  q3DynamicAABBTree.h  q3DynamicAABBTree.inl
qu3e/src/collision/: q3Box.cpp  q3Box.h  q3Box.inl  q3Collide.cpp
qu3e/src/common/: q3Geometry.h  q3Geometry.inl  q3Memory.cpp  q3Memory.h  q3Settings.h  q3Types.h
qu3e/src/debug/: q3Render.cpp  q3Render.h
qu3e/src/dynamics/: q3Body.cpp  q3Body.h  q3BodyState.h  q3BroadPhase.cpp  q3BroadPhase.h  q3ClipVertex.h  q3Contact.cpp  q3Contact.h  q3ContactConstraint.cpp  q3ContactConstraint.h  q3ContactConstraintState.h  q3ContactEdge.h  q3ContactManager.cpp  q3ContactManager.h  q3ContactSolver.cpp  q3ContactSolver.h  q3ContactState.h  q3DynamicAABBTree.h  q3FeaturePair.h  q3Island.cpp  q3Island.h  q3Magnifold.h  q3Manifold.cpp  q3TimeStep.cpp  q3TimeStep.h
qu3e/src/math/: q3AABB.h  q3Geometry.cpp  q3Geometry.h  q3HalfSpace.cpp  q3HalfSpace.h  q3Mat3.cpp  q3Mat3.h  q3Mat3.inl  q3Math.h  q3Math.inl  q3Quaternion.cpp  q3Quaternion.h  q3Raycast.h  q3Transform.h  q3Vec3.cpp  q3Vec3.h  q3Vec3.inl
qu3e/src/scene/: q3Body.cpp  q3Body.h  q3Box.cpp  q3Box.h  q3Env.h  q3Scene.cpp  q3Scene.h
subprojects/: cuber.wrap  directxmath.wrap  fontstash.wrap  physicseffects.wrap  remotery.wrap
subprojects/packagefiles/directxmath/: meson.build
subprojects/packagefiles/fontstash/: meson.build
subprojects/packagefiles/imgui/: meson.build
subprojects/packagefiles/remotery/: meson.build
(+194 files in other folders)
