project('cubei', ['c', 'cpp'], default_options: ['cpp_std=c++20'])
remotery_dep = dependency('remotery')
plog_dep = dependency('plog')
glfw_dep = dependency('glfw3', default_options: ['install=true'])
gl_dep = dependency('opengl')
glew_dep = dependency('glew', default_options: ['default_library=static'])
imgui_dep = dependency('imgui', default_options: ['default_library=static'])
spanmath_dep = dependency('spanmath')
cuber_dep = dependency('cuber')
subdir('easy_physics')
subdir('qu3e')
